--- a/pinion-widget/package.json
+++ b/pinion-widget/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.1.2",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "craco-plugin-scoped-css": "^1.1.1",
+    "eslint-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.6",
     "react-dom": "^17.0.2",
@@ -40,8 +38,14 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^5.3.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^9.8.6",
+    "csso-webpack-plugin": "*",
     "postcss": "^7.0.35",
+    "postcss-parcel-import": "^0.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
 }
