--- a/pinion-widget/package.json
+++ b/pinion-widget/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "craco-plugin-scoped-css": "^1.1.1",
     "eslint-loader": "^4.0.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.6",
     "react-dom": "^17.0.2",
