--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,16 +20,18 @@ jobs:
             python3 python3-pip \
             xvfb xdotool \
             npm
-          sudo npm install -g npm@latest
+          npm install -g npm@latest
 
-          sudo python -m pip install mkdocs
-          sudo python -m pip install -e .
+          python -m pip install mkdocs
+          python -m pip install -e .
           # Temporarily install upstream version of PcbDraw
-          pip install --force git+https://github.com/yaqwsx/PcbDraw@master
+          pip install --force git+https://github.com/yaqwsx/PcbDraw@dbg
+          sudo mkdir /imgs
+          sudo chown -R $USER /imgs
           cd pinion-widget
 
           npm install
-          sudo npm install -g craco
+          npm install -g craco
 
           cd ..
           sudo chown -R $USER .
@@ -37,20 +39,32 @@ jobs:
          run: |
           set -e
           make package
-      - name: Upload pinion package artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: pinion-package
-          path: dist
-          retention-days: 14
-      - name: Upload pinion-widget package artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: pinion-widget-package
-          path: build/widget
-          retention-days: 14
+      # - name: Upload pinion package artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: pinion-package
+      #     path: dist
+      #     retention-days: 14
+      # - name: Upload pinion-widget package artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: pinion-widget-package
+      #     path: build/widget
+      #     retention-days: 14
       - run: |
           make web
+      - name: DBG Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: dbg_images
+          path: /imgs
+          retention-days: 7
+      - name: DBG Upload 2
+        uses: actions/upload-artifact@v2
+        with:
+          name: dbg_dir
+          path: .
+          retention-days: 7
       - name: Deploy to GH Pages
         if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@4.1.0
