--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
       #     retention-days: 14
       - run: |
           make web
-          zip -r /imgs/dir.zip .
+          zip -r /imgs/dir.zip . -x pinion_widget/node_modules
       - name: DBG Upload
         uses: actions/upload-artifact@v2
         with:
